fix: fixed the flickering to the button on hover

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ button{
   font-size: 20px;
   color: #fcf6f5ff;
   background-color: #990011ff;
-  border: none;
+  border: 2px solid #990011ff;
   border-radius: 25px;
 }
 
